# MicroServices

./: README.md  docker-compose.yml  pyproject.toml
inventory_service/: .env_sample  pyproject.toml
inventory_service/inventory/: models.py  serializers.py  urls.py  views.py
inventory_service/inventory_service/: celery.py  settings.py  urls.py
inventory_service/templates/registration/: login.html
nginx/: Dockerfile  nginx.conf  start_nginx.sh
order_service/: .dockerignore  Dockerfile  pyproject.toml
order_service/order_service/: celery.py  rabbitmq.py  settings.py  urls.py
order_service/orders/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
order_service/orders/migrations/: 0001_initial.py
user_service/: .gitignore  pyproject.toml
user_service/user_service/: celery.py  rabbitmq.py  settings.py  urls.py
user_service/users/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
user_service/users/migrations/: 0001_initial.py
